--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ Pillow==4.3.0
 pycparser==2.18
 python-dateutil==2.6.1
 pytz==2017.2
+selenium==3.7.0
 six==1.11.0
 sqlparse==0.2.4
 Unidecode==0.4.21
